[tool.poetry]
name = "insta-checker"
version = "0.4.7"
description = "Python Instagram API checker / scrapper / wrapper 2021. Fast and asynchronously scrapes instagram profiles and posts, powered by aiohttp."
readme = "README.md"
repository = "https://github.com/gh0st-work/insta_checker"
homepage = "https://github.com/gh0st-work/insta_checker"
keywords = ["instagram", "API", "scrape", "checker", "scrapper"]
authors = ["Anton Nechaev <antonnechaev990@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
aiohttp = "^3.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


